WanaLyzer/out/numpy/typing/tests/data/fail/index_tricks.pyi
AR_LIKE_i: list[int]
AR_LIKE_f: list[float]
